# Operating-systems-practice

./: .gitignore  CMakeLists.txt
Task1/: CMakeLists.txt  README.md  Отчет
Task1/output/: Makefile  main.Wall  main.bad  main.e  main.s
Task1/src/: badmain.c  lib.h  main.c
Task10/: CMakeLists.txt  README.md  reader.c  unlink.c
Task11/: README.md
Task12/: README.md  cache.c  data  graph_data.py
Task13/: CMakeLists.txt  README.md  main.c
Task13/queue/: queue.c  queue.h  queue_cond.c  queue_mutex.c
Task2/: CMakeLists.txt  Отчет
Task2/src/: exe  main1.c  main2.c  main3.c  main4.c  main5.c  main6.c
Task3/: CMakeLists.txt  Отчет.odt
Task3/src/: memory-user.c
Task4/: CMakeLists.txt  null  task6  task7  valgrind-out.txt  valgrind-outgcc.txt  Отчет.odt
Task4/src/: aspace.c  null.c  task2.c  task6.c  task7.c
Task5/: CMakeLists.txt  README.md
Task5/src/: myfind.c  myls.c  mystat.c  mytail.c  task1.c  task2.c
Task6/: CMakeLists.txt  README.md  main.c
Task6/Tests/: 2.txt  checksumm.txt
Task6/src/: crc16.c  crcshifrchecker.c  fletcher.c  shifr.c  xor.c
Task7/: CMakeLists.txt  README.md  main.c  test1.txt  testout.txt
Task8/: CMakeLists.txt  README.md  test.txt
Task8/src/: client.c  server.c
Task9/: README.md  main-race.c
